--- a/NSelectViewCheckBox/Assets/NSelectViewCheckBox.xib
+++ b/NSelectViewCheckBox/Assets/NSelectViewCheckBox.xib
@@ -35,7 +35,7 @@
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Riv-XK-pqn">
                     <rect key="frame" x="0.0" y="42" width="348" height="133"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="2" minimumInteritemSpacing="2" id="hdh-aw-YCp">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -44,7 +44,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
             </subviews>
-            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Riv-XK-pqn" firstAttribute="top" secondItem="wol-ek-ZaR" secondAttribute="bottom" constant="8" id="3Oh-jO-ud7"/>
                 <constraint firstItem="wol-ek-ZaR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Azz-Uc-aI8"/>
