--- a/NSelectViewCheckBox/Assets/OptionViewCell.xib
+++ b/NSelectViewCheckBox/Assets/OptionViewCell.xib
@@ -11,14 +11,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionViewCell" id="mHE-Fl-ryZ" customClass="OptionViewCell" customModule="NSelectViewCheckBox" customModuleProvider="target">
+        <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionViewCell" id="mHE-Fl-ryZ" customClass="OptionViewCell" customModule="NSelectViewCheckBox" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="152" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                 <rect key="frame" x="0.0" y="0.0" width="152" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0V-81-w5j">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="d0V-81-w5j">
                         <rect key="frame" x="38" y="26.5" width="106" height="19.5"/>
                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                         <nil key="textColor"/>
@@ -48,7 +48,7 @@
                     </button>
                 </subviews>
             </view>
-            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Fnj-sR-8zP" firstAttribute="leading" secondItem="mHE-Fl-ryZ" secondAttribute="leading" id="1lq-va-1Af"/>
                 <constraint firstItem="d0V-81-w5j" firstAttribute="leading" secondItem="Fnj-sR-8zP" secondAttribute="trailing" constant="8" id="3LK-HA-0sc"/>
